[package]
name = "cumulus-primitives-parachain-inherent"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
async-trait = { version = "0.1.68", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1.37", optional = true }

# Substrate
sc-client-api = { git = "https://github.com/moonbeam-foundation/substrate", optional = true, branch = "grw/moon-1119-add-identity-specs" }
sp-api = { git = "https://github.com/moonbeam-foundation/substrate", optional = true, branch = "grw/moon-1119-add-identity-specs" }
sp-core = { git = "https://github.com/moonbeam-foundation/substrate", default-features = false, branch = "grw/moon-1119-add-identity-specs" }
sp-inherents = { git = "https://github.com/moonbeam-foundation/substrate", default-features = false, branch = "grw/moon-1119-add-identity-specs" }
sp-runtime = { git = "https://github.com/moonbeam-foundation/substrate", optional = true, branch = "grw/moon-1119-add-identity-specs" }
sp-state-machine = { git = "https://github.com/moonbeam-foundation/substrate", optional = true, branch = "grw/moon-1119-add-identity-specs" }
sp-std = { git = "https://github.com/moonbeam-foundation/substrate", default-features = false, branch = "grw/moon-1119-add-identity-specs" }
sp-storage = { git = "https://github.com/moonbeam-foundation/substrate", optional = true, branch = "grw/moon-1119-add-identity-specs" }
sp-trie = { git = "https://github.com/moonbeam-foundation/substrate", default-features = false, branch = "grw/moon-1119-add-identity-specs" }

# Cumulus
cumulus-primitives-core = { path = "../core", default-features = false }
cumulus-relay-chain-interface = { path = "../../client/relay-chain-interface", optional = true }
cumulus-test-relay-sproof-builder = { path = "../../test/relay-sproof-builder", optional = true }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"scale-info/std",
	"tracing",
	"sc-client-api",
	"sp-api",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime",
	"sp-state-machine",
	"sp-std/std",
	"sp-storage",
	"sp-trie/std",
	"cumulus-primitives-core/std",
	"cumulus-relay-chain-interface",
	"cumulus-test-relay-sproof-builder",
]
