[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.20" }

# Polkadot
polkadot-core-primitives = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "girazoki-xcm-call-polkadot-changes" }
polkadot-parachain = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "girazoki-xcm-call-polkadot-changes" }
polkadot-primitives = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "girazoki-xcm-call-polkadot-changes" }
xcm = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "girazoki-xcm-call-polkadot-changes" }

# Cumulus
cumulus-primitives-core = { path = "../core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
	"polkadot-primitives/std",
	"cumulus-primitives-core/std",
]
